platform/api/include/oep/api/oep_api.h

/* ------------------------------------------------------------------ */
/* Opaque handles (OEP-SPEC-021 section 4)                             */
/* ------------------------------------------------------------------ */

/* Applications shall never inspect handle contents; a handle is only
   ever passed back into this API. */
typedef struct oep_runtime_impl* OEP_Runtime;
/* Every API function that can fail returns an oep_result_t by value.
   `success` is nonzero on success, in which case error_code is
   OEP_ERROR_NONE, error_category is OEP_ERROR_CATEGORY_NONE, and
   error_message is empty. On failure, error_message is a
   NUL-terminated, human-readable, English-language description
   suitable for logging or for a Bridge to translate/present; it is
   truncated (never overflowed) if longer than
   OEP_MAX_ERROR_MESSAGE - 1 bytes. No heap allocation is associated
   with an oep_result_t: it is a plain value type and requires no
   release function. */
typedef struct oep_result_t {
    int success;
    oep_error_code_t error_code;
    oep_error_category_t error_category;
    char error_message[OEP_MAX_ERROR_MESSAGE];
} oep_result_t;
typedef struct oep_package_id_list_t {
    oep_package_id_t* items;
    int count;
} oep_package_id_list_t;
/* ------------------------------------------------------------------ */
/* Engineering Query Engine (WP-EKE-003)                                */
/* ------------------------------------------------------------------ */
/*
 * Exposes oep::engine::EngineeringQueryEngine -- the ten-category
 * Engineering Query Engine (EQE) built on top of WP-EKE-002's Knowledge
 * Graph Engine. Every function below calls through `runtime`'s
 * engineering_query_engine, which itself consumes the Knowledge Graph
 * Engine EXCLUSIVELY (never RuntimeService/FoundationRuntime/
 * EngineeringContext directly), preserving the same "consume only the
 * layer directly beneath you" boundary WP-EKE-001/WP-EKE-002 already
 * established. Only valid from RepositoryOpen; fail with
 * OEP_ERROR_INVALID_STATE otherwise. Every function also requires a
 * prior successful oep_kge_build_graph/oep_kge_refresh_graph call on
 * this `runtime` handle (the EQE queries the already-built Knowledge
 * Graph, never builds one itself); calling beforehand fails with
 * OEP_ERROR_INVALID_STATE.
 *
 * Cache note: plan_query/execute_query cache internally by
 * cache_key(request). Per EngineeringQueryEngine's own doc comment,
 * that cache is invalidated ONLY by an explicit oep_eqe_clear_query_cache
 * call -- callers MUST call it after oep_kge_build_graph/
 * oep_kge_refresh_graph if they want subsequent queries to reflect the
 * rebuilt graph (the EQE has no way to detect the rebuild on its own).
 *
 * Query filter shape: oep_query_filter_t mirrors QueryFilter's optional
 * fields with the "has_X" flag convention oep_engine_query_request_t
 * (WP-EKE-001) already established for discriminated/optional C struct
 * fields. `tags` uses the array-of-strings input convention
 * oep_kge_subgraph (WP-EKE-002) established for multi-value input: a
 * non-NULL (unless tag_count == 0) array of caller-owned strings, read
 * only for the duration of the call.
 *
 * Scope decision -- result fields: oep_query_result_summary_t exposes
 * every QueryStatistics scalar field (execution_time_ms,
 * objects_examined, relationships_examined, traversal_depth,
 * result_count) plus `traversal_summary` as a fixed 256-byte buffer
 * (truncated if longer). `indexes_used` (a vector<string>) is
 * deliberately OMITTED from the result summary -- it is, however, still
 * exposed on oep_query_plan_t via the existing oep_package_id_list_t
 * id-list reuse convention, since QueryPlan's C mapping already needs a
 * list output for execution_order and the same convention covers
 * indexes_used at no extra cost.
 */

/* Mirrors oep::engine::QueryCategory. */
typedef enum oep_query_category_t {
    OEP_QUERY_CATEGORY_OBJECT = 0,
    OEP_QUERY_CATEGORY_RELATIONSHIP = 1,
    OEP_QUERY_CATEGORY_DOMAIN = 2,
    OEP_QUERY_CATEGORY_TYPE = 3,
    OEP_QUERY_CATEGORY_DEPENDENCY = 4,
    OEP_QUERY_CATEGORY_NEIGHBORHOOD = 5,
    OEP_QUERY_CATEGORY_PATH = 6,
    OEP_QUERY_CATEGORY_REFERENCE = 7,
    OEP_QUERY_CATEGORY_METADATA = 8,
    OEP_QUERY_CATEGORY_COMPOSITE = 9,
} oep_query_category_t;
/* Mirrors oep::engine::ValidationProfile. */
typedef enum oep_validation_profile_t {
    OEP_VALIDATION_PROFILE_STRUCTURAL = 0,
    OEP_VALIDATION_PROFILE_CONNECTIVITY = 1,
    OEP_VALIDATION_PROFILE_DOCUMENTATION = 2,
    OEP_VALIDATION_PROFILE_METADATA = 3,
    OEP_VALIDATION_PROFILE_COMPLETE = 4,
} oep_validation_profile_t;
/* Mirrors oep::engine::InspectionTargetKind. */
typedef enum oep_inspection_target_kind_t {
    OEP_INSPECTION_TARGET_OBJECT = 0,
    OEP_INSPECTION_TARGET_PACKAGE = 1,
    OEP_INSPECTION_TARGET_CONTEXT = 2,
} oep_inspection_target_kind_t;
/* The one shape every workflow returns (see intelligence_types.hpp's
   WorkflowResult), fixed-layout except for the object_id list, which is
   returned separately via the paired `oep_package_id_list_t` output
   parameter every oep_eip_* workflow function below takes. */
typedef struct oep_workflow_result_t {
    oep_workflow_kind_t kind;
    int success;
    char summary[OEP_MAX_WORKFLOW_SUMMARY];
    double execution_time_ms;
} oep_workflow_result_t;
/* "Query" workflow (see EngineeringIntelligencePlatform::query).
   `session_id` must already exist on this handle (OEP_ERROR_NOT_FOUND
   otherwise). Requires a built graph. `runtime`, `session_id`, and
   `primary_object_id` must not be NULL (`primary_object_id` may be
   empty). `out_result` and `out_object_ids` may each be NULL if not
   needed.

   Ownership: on success, if non-NULL, the caller owns
   `out_object_ids->items` and must release it with exactly one call to
   oep_package_id_list_release. */
oep_result_t oep_eip_query(OEP_Runtime runtime, const char* session_id, oep_query_category_t category,
                            const char* primary_object_id, oep_workflow_result_t* out_result,
                            oep_package_id_list_t* out_object_ids);
/* "Inspect" workflow (see EngineeringIntelligencePlatform::inspect).
   Same session_id/graph-readiness contract as oep_eip_query. `target_id`
   must not be NULL (may be empty when `kind` is
   OEP_INSPECTION_TARGET_CONTEXT). Same ownership as oep_eip_query. */
oep_result_t oep_eip_inspect(OEP_Runtime runtime, const char* session_id, oep_inspection_target_kind_t kind,
                              const char* target_id, oep_workflow_result_t* out_result,
                              oep_package_id_list_t* out_object_ids);
/* "Validate" workflow (see EngineeringIntelligencePlatform::validate).
   Same session_id/graph-readiness contract as oep_eip_query. `object_id`
   must not be NULL. Same ownership as oep_eip_query. */
oep_result_t oep_eip_validate(OEP_Runtime runtime, const char* session_id, const char* object_id,
                               oep_validation_profile_t profile, oep_workflow_result_t* out_result,
                               oep_package_id_list_t* out_object_ids);
/* "Analyze" workflow (see EngineeringIntelligencePlatform::analyze).
   Same session_id/graph-readiness contract as oep_eip_query. `object_id`
   must not be NULL. Same ownership as oep_eip_query. */
oep_result_t oep_eip_analyze(OEP_Runtime runtime, const char* session_id, const char* object_id,
                              oep_workflow_result_t* out_result, oep_package_id_list_t* out_object_ids);
/* "Reason" workflow (see EngineeringIntelligencePlatform::reason).
   Same session_id/graph-readiness contract as oep_eip_query.
   `starting_object_ids` may be NULL only if `starting_object_id_count
   == 0` (mirrors oep_reasoning_create_session's array-of-strings
   convention). `objective` must not be NULL (may be empty). Same
   ownership as oep_eip_query. */
oep_result_t oep_eip_reason(OEP_Runtime runtime, const char* session_id, const char* objective,
                             const char* const* starting_object_ids, int starting_object_id_count,
                             oep_workflow_result_t* out_result, oep_package_id_list_t* out_object_ids);
/* "Recommend" workflow (see EngineeringIntelligencePlatform::recommend).
   Same session_id/graph-readiness contract as oep_eip_query. `object_id`
   must not be NULL. `out_object_ids`, if non-NULL, is filled with each
   recommendation's target object_id (one entry per recommendation, see
   WorkflowResult::object_ids). Same ownership as oep_eip_query. */
oep_result_t oep_eip_recommend(OEP_Runtime runtime, const char* session_id, const char* object_id,
                                oep_workflow_result_t* out_result, oep_package_id_list_t* out_object_ids);
/* Scalar mirror of oep::engine::EngineeringSummaryReport. */
typedef struct oep_engineering_summary_report_t {
    int object_count;
    int relationship_count;
    int connected_component_count;
    int validation_pass_count;
    int validation_finding_count;
    char summary[OEP_MAX_REPORT_SUMMARY];
} oep_engineering_summary_report_t;
/* Stateless Service Orchestrator call (see
   EngineeringIntelligencePlatform::engineering_summary). No session
   required. Requires a built graph. `runtime` and `out_summary` must
   not be NULL. */
oep_result_t oep_eip_engineering_summary(OEP_Runtime runtime, oep_engineering_summary_report_t* out_summary);
/* Scalar mirror of oep::engine::EngineeringHealthReport. */
typedef struct oep_engineering_health_report_t {
    double health_score;
    int passed;
    int failed;
    int warnings;
    int errors;
    int critical;
    char summary[OEP_MAX_REPORT_SUMMARY];
} oep_engineering_health_report_t;
/* Stateless Service Orchestrator call (see
   EngineeringIntelligencePlatform::engineering_health). No session
   required. Requires a built graph. `runtime` and `out_health` must not
   be NULL. */
oep_result_t oep_eip_engineering_health(OEP_Runtime runtime, oep_engineering_health_report_t* out_health);
/* Stateless Service Orchestrator call (see
   EngineeringIntelligencePlatform::engineering_recommendations and this
   section's "oep_eip_engineering_recommendations shape" header note).
   No session required. Requires a built graph. `runtime`, `object_id`,
   and `out_recommendation_messages` must not be NULL.

   Ownership: on success, the caller owns
   `out_recommendation_messages->items` (each `.id` field holding one
   recommendation's message text, truncated to OEP_MAX_PACKAGE_ID bytes)
   and must release it with exactly one call to
   oep_package_id_list_release. */
oep_result_t oep_eip_engineering_recommendations(OEP_Runtime runtime, const char* object_id,
                                                  oep_package_id_list_t* out_recommendation_messages);
/* Scalar mirror of oep::engine::RuntimeMetrics. */
typedef struct oep_runtime_metrics_t {
    int query_count;
    int validation_count;
    int analysis_count;
    int reasoning_count;
    int cache_hits;
    int cache_misses;
    int active_session_count;
    int total_session_count;
    double total_execution_time_ms;
} oep_runtime_metrics_t;
/* Snapshot of this handle's Runtime Metrics (see
   EngineeringIntelligencePlatform::runtime_metrics). No session
   required, no graph-readiness precondition (a fresh handle simply
   reports all zeros). `runtime` and `out_metrics` must not be NULL. */
oep_result_t oep_eip_runtime_metrics(OEP_Runtime runtime, oep_runtime_metrics_t* out_metrics);
/* Clears the Query Engine's cache (see
   EngineeringIntelligencePlatform::invalidate_caches). No session
   required, no graph-readiness precondition. `runtime` must not be
   NULL. */
oep_result_t oep_eip_invalidate_caches(OEP_Runtime runtime);
/* Closes every open session on this handle and clears every lower
   engine's cache (see EngineeringIntelligencePlatform::cleanup).
   `runtime` must not be NULL. */
oep_result_t oep_eip_cleanup(OEP_Runtime runtime);