lib/core/foundation/oep_api_bindings.dart

      eipQuery = _library.lookupFunction<OepEipQueryNative, OepEipQueryDart>('oep_eip_query'),
      eipInspect = _library.lookupFunction<OepEipInspectNative, OepEipInspectDart>('oep_eip_inspect'),
      eipValidate = _library.lookupFunction<OepEipValidateNative, OepEipValidateDart>('oep_eip_validate'),
      eipAnalyze = _library.lookupFunction<OepEipAnalyzeNative, OepEipAnalyzeDart>('oep_eip_analyze'),
      eipReason = _library.lookupFunction<OepEipReasonNative, OepEipReasonDart>('oep_eip_reason'),
      eipRecommend = _library.lookupFunction<OepEipRecommendNative, OepEipRecommendDart>('oep_eip_recommend'),
      eipEngineeringSummary = _library
          .lookupFunction<OepEipEngineeringSummaryNative, OepEipEngineeringSummaryDart>(
            'oep_eip_engineering_summary',
          ),
      eipEngineeringHealth = _library
          .lookupFunction<OepEipEngineeringHealthNative, OepEipEngineeringHealthDart>(
            'oep_eip_engineering_health',
          ),
      eipEngineeringRecommendations = _library
          .lookupFunction<OepEipEngineeringRecommendationsNative, OepEipEngineeringRecommendationsDart>(
            'oep_eip_engineering_recommendations',
          ),
      eipRuntimeMetrics = _library.lookupFunction<OepEipRuntimeMetricsNative, OepEipRuntimeMetricsDart>(
        'oep_eip_runtime_metrics',
      ),
      eipInvalidateCaches = _library.lookupFunction<OepEipInvalidateCachesNative, OepEipInvalidateCachesDart>(
        'oep_eip_invalidate_caches',
      ),
      eipCleanup = _library.lookupFunction<OepEipCleanupNative, OepEipCleanupDart>('oep_eip_cleanup');

  // ignore: unused_field
  final DynamicLibrary _library;

  final OepFoundationVersionDart foundationVersion;
  final OepApiVersionDart apiVersion;
  final OepAbiVersionDart abiVersion;
  final OepRuntimeStateToStringDart runtimeStateToString;
  final OepErrorCodeToStringDart errorCodeToString;
  final OepErrorCategoryToStringDart errorCategoryToString;
  final OepRuntimeCreateDart runtimeCreate;
  final OepRuntimeDestroyDart runtimeDestroy;
  final OepRuntimeInitializeDart runtimeInitialize;
  final OepRuntimeOpenRepositoryDart runtimeOpenRepository;
  final OepRuntimeCloseRepositoryDart runtimeCloseRepository;
  final OepRuntimeShutdownDart runtimeShutdown;
  final OepRuntimeGetStateDart runtimeGetState;
  final OepRuntimeGetRepositoryStatusDart runtimeGetRepositoryStatus;
  final OepObjectTypeToStringDart objectTypeToString;
  final OepObjectStoreGetCountDart objectStoreGetCount;
  final OepObjectStoreGetByIdDart objectStoreGetById;
  final OepObjectStoreListDart objectStoreList;
  final OepObjectListReleaseDart objectListRelease;
  final OepRuntimeGetRepositoryStatisticsDart runtimeGetRepositoryStatistics;
  final OepRelationshipTypeToStringDart relationshipTypeToString;
  final OepRelationshipStoreGetCountDart relationshipStoreGetCount;
  final OepRelationshipStoreGetByIdDart relationshipStoreGetById;
  final OepRelationshipStoreListDart relationshipStoreList;
  final OepRelationshipListReleaseDart relationshipListRelease;
  final OepMatchLocationToStringDart matchLocationToString;
  final OepSearchRepositoryDart searchRepository;
  final OepRepositorySearchResultReleaseDart repositorySearchResultRelease;
  final OepSearchObjectsDart searchObjects;
  final OepObjectSearchResultListReleaseDart objectSearchResultListRelease;
  final OepSearchRelationshipsDart searchRelationships;
  final OepRelationshipSearchResultListReleaseDart relationshipSearchResultListRelease;
  final OepObjectCreateDart objectCreate;
  final OepRelationshipCreateDart relationshipCreate;
  final OepTransactionBeginDart transactionBegin;
  final OepTransactionCommitDart transactionCommit;
  final OepTransactionRollbackDart transactionRollback;
  final OepTransactionIsActiveDart transactionIsActive;
  final OepPackageInstallDart packageInstall;
  final OepPackageListInstalledDart packageListInstalled;
  final OepInstalledPackageListReleaseDart installedPackageListRelease;
  final OepPackageGetInfoDart packageGetInfo;
  final OepPackageGetContentsDart packageGetContents;
  final OepPackageLocateDart packageLocate;
  final OepPackageVerifyDart packageVerify;
  final OepPackageSearchDart packageSearch;
  final OepTransactionGetInfoDart transactionGetInfo;
  final OepTransactionHistoryDart transactionHistory;
  final OepTransactionRecordListReleaseDart transactionRecordListRelease;
  final OepTrustAddCertificateDart trustAddCertificate;
  final OepTrustGetCertificateDart trustGetCertificate;
  final OepTrustListCertificatesDart trustListCertificates;
  final OepCertificateListReleaseDart certificateListRelease;
  final OepTrustRevokeCertificateDart trustRevokeCertificate;
  final OepTrustGetPolicyDart trustGetPolicy;
  final OepTrustSetPolicyDart trustSetPolicy;
  final OepPackageGetTrustStatusDart packageGetTrustStatus;
  final OepDependencyStateToStringDart dependencyStateToString;
  final OepDependencyEntryListReleaseDart dependencyEntryListRelease;
  final OepPackageIdListReleaseDart packageIdListRelease;
  final OepPackageResolveDependenciesDart packageResolveDependencies;
  final OepEventTypeToStringDart eventTypeToString;
  final OepRepositoryEventListReleaseDart repositoryEventListRelease;
  final OepRuntimeRecentEventsDart runtimeRecentEvents;
  final OepPackageAnalyzeUninstallImpactDart packageAnalyzeUninstallImpact;
  final OepPackageUninstallDart packageUninstall;
  final OepPackageAnalyzeUpdateImpactDart packageAnalyzeUpdateImpact;
  final OepPackageUpdateDart packageUpdate;
  final OepMergeConflictKindToStringDart mergeConflictKindToString;
  final OepMergeConflictListReleaseDart mergeConflictListRelease;
  final OepRepositoryPlanMergeDart repositoryPlanMerge;
  final OepRepositoryExecuteMergeDart repositoryExecuteMerge;
  final OepEngineLoadObjectDart engineLoadObject;
  final OepEngineLoadGraphDart engineLoadGraph;
  final OepEngineQueryDart engineQuery;
  final OepEngineTraverseDart engineTraverse;
  final OepEngineRelatedObjectsDart engineRelatedObjects;
  final OepEngineDependencyGraphDart engineDependencyGraph;
  final OepKgeBuildGraphDart kgeBuildGraph;
  final OepKgeRefreshGraphDart kgeRefreshGraph;
  final OepGraphIssueKindToStringDart graphIssueKindToString;
  final OepGraphIssueListReleaseDart graphIssueListRelease;
  final OepKgeValidateGraphDart kgeValidateGraph;
  final OepKgeGraphStatisticsDart kgeGraphStatistics;
  final OepComponentMembershipListReleaseDart componentMembershipListRelease;
  final OepKgeConnectedComponentsDart kgeConnectedComponents;
  final OepKgeShortestPathDart kgeShortestPath;
  final OepKgeSubgraphDart kgeSubgraph;
  final OepStringReleaseDart stringRelease;
  final OepKgeExportJsonDart kgeExportJson;
  final OepKgeExportGraphmlPlaceholderDart kgeExportGraphmlPlaceholder;
  final OepQueryCategoryToStringDart queryCategoryToString;
  final OepEqePlanQueryDart eqePlanQuery;
  final OepEqeExecuteQueryDart eqeExecuteQuery;
  final OepEqeQueryStatisticsDart eqeQueryStatistics;
  final OepEqeClearQueryCacheDart eqeClearQueryCache;
  final OepEqeQueryCacheInfoDart eqeQueryCacheInfo;
  final OepRuleCategoryToStringDart ruleCategoryToString;
  final OepRuleSeverityToStringDart ruleSeverityToString;
  final OepRuleScopeKindToStringDart ruleScopeKindToString;
  final OepRuleConditionKindToStringDart ruleConditionKindToString;
  final OepRuleEvaluationStatusToStringDart ruleEvaluationStatusToString;
  final OepRuleConditionListReleaseDart ruleConditionListRelease;
  final OepRuleDiagnosticListReleaseDart ruleDiagnosticListRelease;
  final OepRuleEvaluationSummaryListReleaseDart ruleEvaluationSummaryListRelease;
  final OepRulesRegisterDart rulesRegister;
  final OepRulesRemoveDart rulesRemove;
  final OepRulesEnableDart rulesEnable;
  final OepRulesDisableDart rulesDisable;
  final OepRulesListAllDart rulesListAll;
  final OepRulesListEnabledDart rulesListEnabled;
  final OepRulesListDisabledDart rulesListDisabled;
  final OepRulesGetDart rulesGet;
  final OepRulesEvaluateDart rulesEvaluate;
  final OepRulesEvaluateAllDart rulesEvaluateAll;
  final OepValidationProfileToStringDart validationProfileToString;
  final OepValidationFindingListReleaseDart validationFindingListRelease;
  final OepValidationCreateSessionDart validationCreateSession;
  final OepValidationValidateObjectDart validationValidateObject;
  final OepValidationValidateObjectsDart validationValidateObjects;
  final OepValidationValidateContextDart validationValidateContext;
  final OepValidationValidatePackageDart validationValidatePackage;
  final OepValidationReportDart validationReport;
  final OepValidationStatisticsFnDart validationStatistics;
  final OepAnalysisDependenciesDart analysisDependencies;
  final OepAnalysisImpactDart analysisImpact;
  final OepAnalysisReachabilityDart analysisReachability;
  final OepAnalysisRootCauseDart analysisRootCause;
  final OepReasoningCreateSessionDart reasoningCreateSession;
  final OepReasoningExecuteDart reasoningExecute;
  final OepReasoningReportDart reasoningReport;
  final OepReasoningRecommendationsDart reasoningRecommendations;
  final OepReasoningGetConclusionDart reasoningGetConclusion;
  final OepRecommendationKindToStringDart recommendationKindToString;
  final OepReasoningGetRecommendationDart reasoningGetRecommendation;
  final OepReasoningGetEvidenceNodeDart reasoningGetEvidenceNode;
  final OepWorkflowKindToStringDart workflowKindToString;
  final OepInspectionTargetKindToStringDart inspectionTargetKindToString;
  final OepEipCreateSessionDart eipCreateSession;
  final OepEipResumeSessionDart eipResumeSession;
  final OepEipCloneSessionDart eipCloneSession;
  final OepEipCloseSessionDart eipCloseSession;
  final OepEipSwitchSessionDart eipSwitchSession;
  final OepEipListSessionsDart eipListSessions;
  final OepEipGetSessionDart eipGetSession;
  final OepEipExportSessionSummaryDart eipExportSessionSummary;
  final OepEipQueryDart eipQuery;
  final OepEipInspectDart eipInspect;
  final OepEipValidateDart eipValidate;
  final OepEipAnalyzeDart eipAnalyze;
  final OepEipReasonDart eipReason;
  final OepEipRecommendDart eipRecommend;
  final OepEipEngineeringSummaryDart eipEngineeringSummary;
  final OepEipEngineeringHealthDart eipEngineeringHealth;
  final OepEipEngineeringRecommendationsDart eipEngineeringRecommendations;
  final OepEipRuntimeMetricsDart eipRuntimeMetrics;
  final OepEipInvalidateCachesDart eipInvalidateCaches;
  final OepEipCleanupDart eipCleanup;
}
